improves support for transparency